<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.felix.android.user.vm.SetUserInfoViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.felix.android.common.view.CommonHeader
        android:id="@+id/title_bar"
        app:ch_title="@string/user_set_user_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        android:text="@{vm.name}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/user_set_user_info_name"
        android:layout_marginTop="@dimen/common_space_line_ver_medium"
        android:layout_marginStart="@dimen/common_space_line_ver_medium"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        app:addTextChangedListener="@{vm.observeName()}"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:text="@{vm.email}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:hint="@string/user_set_user_info_email"
        android:layout_marginTop="@dimen/common_space_line_ver_medium"
        android:layout_marginStart="@dimen/common_space_line_ver_medium"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:addTextChangedListener="@{vm.observeEmail()}"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/common_confirm"
        android:layout_marginTop="@dimen/common_space_line_ver_medium"
        android:onClick="@{()->vm.saveUserInfo()}"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>